corrected console errors and aligned picture

--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -125,6 +125,34 @@
     font-size: 1.5rem;
     color: var(--standard-accent-yellow);
   }
+  .mobile-menu-btn .navbar-toggler-icon {
+    background-image: none !important;
+    width: 28px;
+    height: 28px;
+    display: inline-block;
+    position: relative;
+  }
+  .mobile-menu-btn .navbar-toggler-icon:before,
+  .mobile-menu-btn .navbar-toggler-icon:after,
+  .mobile-menu-btn .navbar-toggler-icon div {
+    content: '';
+    display: block;
+    height: 3px;
+    width: 100%;
+    background: var(--standard-accent-yellow);
+    border-radius: 2px;
+    margin: 5px 0;
+    transition: all 0.3s;
+  }
+  .mobile-menu-btn .navbar-toggler-icon div:first-child {
+    margin: 5px 0 3px 0;
+  }
+  .mobile-menu-btn .navbar-toggler-icon div:nth-child(2) {
+    margin: 0;
+  }
+  .mobile-menu-btn .navbar-toggler-icon div:last-child {
+    margin: 3px 0 5px 0;
+  }
   .mobile-nav-dropdown {
     position: absolute;
     top: 48px;
